Update lazy loading for images

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   src="images/cute-cartoon-kid-posing-portrait.jpg" 
   alt="About Image" 
   class="rounded-circle img-fluid" 
-  style="width: 400px; height: 400px; object-fit: cover;"                               
+  style="width: 400px; height: 400px; object-fit: cover;" loading="lazy"                              
 /></a>
 
       </div>
@@ -166,7 +166,7 @@
       <!-- Project 1 -->
       <div class="col-md-6 mb-4">
         <div class="project" data-aos="fade-up" data-aos-duration="3000" data-aos-easing="linear">
-          <img src="images/Bìa opt2.png" alt="Project 1" class="project-image">
+          <img src="images/Bìa opt2.png" alt="Project 1" class="project-image" loading="lazy">
           <div class="project-details">
             <div class="tags">
               <span>Brand Identity</span>
@@ -189,7 +189,7 @@
       <!-- Project 2 -->
       <div class="col-md-6 mb-4">
         <div class="project" data-aos="fade-up" data-aos-duration="3000" data-aos-easing="linear">
-          <img src="images/room-decor-with-potted-monstera-plant.jpg" alt="Project 2" class="project-image">
+          <img src="images/room-decor-with-potted-monstera-plant.jpg" alt="Project 2" class="project-image" loading="lazy">
           <div class="project-details">
             <div class="tags">
               <span>Web Design</span>
@@ -352,7 +352,7 @@ data-aos-delay="900">
   data-aos-easing="linear">
         <div class="card text-center">
           <div class="card-body">
-            <img src="images/brown-retro-electronic-clock-device.png" alt="Content Planning" class="service-image">
+            <img src="images/brown-retro-electronic-clock-device.png" alt="Content Planning" class="service-image" loading="lazy">
             <h5 class="card-title mt-3">Content Planning</h5>
             <p class="card-text">Tôi sẽ giúp bạn lên ý tưởng và xây dựng chiến lược nội dung hiệu quả.</p>
             <button class="btn btn-warning fw-bold">Tham khảo</button>
@@ -366,7 +366,7 @@ data-aos-delay="900">
 data-aos-delay="200">
         <div class="card text-center">
           <div class="card-body">
-            <img src="images/3d-rendering-pen-ai-generated (1).png" alt="Copywriting" class="service-image">
+            <img src="images/3d-rendering-pen-ai-generated (1).png" alt="Copywriting" class="service-image" loading="lazy">
             <h5 class="card-title mt-3">Copy Writing</h5>
             <p class="card-text">Tạo ra những nội dung độc đáo và thu hút sự chú ý từ khách hàng.</p>
             <button class="btn btn-warning fw-bold">Tham khảo</button>
@@ -380,7 +380,7 @@ data-aos-delay="200">
 data-aos-delay="400">
         <div class="card text-center">
           <div class="card-body">
-            <img src="images/beauty-product-container-single-object-close-up-plastic-jar-bottle-paintbrush-make-up-colors-liquid-generated-by-artificial-intelligence.png" alt="Graphic Design" class="service-image">
+            <img src="images/beauty-product-container-single-object-close-up-plastic-jar-bottle-paintbrush-make-up-colors-liquid-generated-by-artificial-intelligence.png" alt="Graphic Design" class="service-image" loading="lazy">
             <h5 class="card-title mt-3">Graphic Design</h5>
             <p class="card-text">Biến ý tưởng thành những sản phẩm trực quan bắt mắt.</p>
             <button class="btn btn-warning fw-bold">Tham khảo</button>
@@ -393,7 +393,7 @@ data-aos-delay="400">
   data-aos-easing="linear">
         <div class="card text-center">
           <div class="card-body">
-            <img src="images/3d-rendering-computer-desk.png" alt="Web Design" class="service-image">
+            <img src="images/3d-rendering-computer-desk.png" alt="Web Design" class="service-image" loading="lazy">
             <h5 class="card-title mt-3">Web Design</h5>
             <p class="card-text">Website giới thiệu doanh nghiệp, LDP bán hàng.</p>
             <button class="btn btn-warning fw-bold">Tham khảo</button>
@@ -407,7 +407,7 @@ data-aos-delay="400">
 data-aos-delay="200">
         <div class="card text-center">
           <div class="card-body">
-            <img src="images/realistic-phone-studio-social-media-concept.png" alt="Social Media" class="service-image">
+            <img src="images/realistic-phone-studio-social-media-concept.png" alt="Social Media" class="service-image" loading="lazy">
             <h5 class="card-title mt-3">Social Media</h5>
             <p class="card-text">Tạo nội dung hàng tháng, tăng tương tác trên các nền tảng MXH.</p>
             <button class="btn btn-warning fw-bold">Tham khảo</button>
@@ -421,7 +421,7 @@ data-aos-delay="200">
 data-aos-delay="400">
         <div class="card text-center">
           <div class="card-body">
-            <img src="images/3d-floating-megaphone-with-radiating-sound-waves-symbolizing-advocacy-activism-human-rights.png" alt="Marketing Campaign Planning" class="service-image">
+            <img src="images/3d-floating-megaphone-with-radiating-sound-waves-symbolizing-advocacy-activism-human-rights.png" alt="Marketing Campaign Planning" class="service-image" loading="lazy">
             <h5 class="card-title mt-3">Marketing Campaign Planning</h5>
             <p class="card-text">Tư vấn, triển khai, phân tích các chiến dịch Marketing.</p>
             <button class="btn btn-warning fw-bold">Tham khảo</button>
@@ -523,42 +523,42 @@ data-aos-offset="200">
         <!-- Brand Identity -->
         <div class="project-content active" id="brand-identity">
 
-	<img src="images/Doc for web44.jpg" alt="Project Image 1" class="img-fluid small">
+	<img src="images/Doc for web44.jpg" alt="Project Image 1" class="img-fluid small" loading="lazy">
 
 		
-          <img src="images/Doc for web36.jpg" alt="Project Image 2" class="img-fluid small">
+          <img src="images/Doc for web36.jpg" alt="Project Image 2" class="img-fluid small" loading="lazy">
 
-		  <img src="images/Doc for web80.jpg" alt="Project Image 31" class="img-fluid large">
+		  <img src="images/Doc for web80.jpg" alt="Project Image 31" class="img-fluid large" loading="lazy">
 			
-          <img src="images/Doc for web34.jpg" alt="Project Image 3" class="img-fluid small">
+          <img src="images/Doc for web34.jpg" alt="Project Image 3" class="img-fluid small" loading="lazy">
 			
-		  <img src="images/Doc for web29.jpg" alt="Project Image 32" class="img-fluid small">
+		  <img src="images/Doc for web29.jpg" alt="Project Image 32" class="img-fluid small" loading="lazy">
         </div>
 
         <!-- Magazine -->
         <div class="project-content" id="magazine">
-          <img src="images/003_TFB_04.png" alt="Project Image 4" class="img-fluid small">
-          <img src="images/2964555.png" alt="Project Image 5" class="img-fluid small">
-          <img src="images/A4 CATALOG BROCHURE MOCKUP-04.png" alt="Project Image 6" class="img-fluid large">
+          <img src="images/003_TFB_04.png" alt="Project Image 4" class="img-fluid small" loading="lazy">
+          <img src="images/2964555.png" alt="Project Image 5" class="img-fluid small" loading="lazy">
+          <img src="images/A4 CATALOG BROCHURE MOCKUP-04.png" alt="Project Image 6" class="img-fluid large" loading="lazy">
         </div>
 
         <!-- Content Planning -->
-        <div class="project-content" id="content-planning">
-          <img src="images/Monthly-Content-Action-Plan-Template-min.png" alt="Project Image 7" class="img-fluid small">
-          <img src="images/content-template-min.jpg" alt="Project Image 8" class="img-fluid small">
+        <div class="project-content" id="content-planning" loading="lazy">
+          <img src="images/Monthly-Content-Action-Plan-Template-min.png" alt="Project Image 7" class="img-fluid small" loading="lazy">
+          <img src="images/content-template-min.jpg" alt="Project Image 8" class="img-fluid small" loading="lazy">
         </div>
 
         <!-- Copy Writing -->
-        <div class="project-content" id="copy-writing">
-          <img src="images/content-template-min.jpg" alt="Project Image 10" class="img-fluid tall">
-          <img src="images/Table_Of_Content_For_Proposal_For_PR_Campaign_One_Pager_Sample_Example_Document_Slide_1.jpg" alt="Project Image 11" class="img-fluid tall">
+        <div class="project-content" id="copy-writing" loading="lazy">
+          <img src="images/content-template-min.jpg" alt="Project Image 10" class="img-fluid tall" loading="lazy">
+          <img src="images/Table_Of_Content_For_Proposal_For_PR_Campaign_One_Pager_Sample_Example_Document_Slide_1.jpg" alt="Project Image 11" class="img-fluid tall" loading="lazy">
         </div>
 
         <!-- Packaging -->
-        <div class="project-content" id="packaging">
-            <img src="images/Doc for web63-fotor-20241227173636.jpg" alt="Project Image 15" class="img-fluid large">
-			<img src="images/153.png" alt="Project Image 13" class="img-fluid small">
-          <img src="images/274.png" alt="Project Image 14" class="img-fluid small">
+        <div class="project-content" id="packaging" loading="lazy">
+            <img src="images/Doc for web63-fotor-20241227173636.jpg" alt="Project Image 15" class="img-fluid large" loading="lazy">
+			<img src="images/153.png" alt="Project Image 13" class="img-fluid small" loading="lazy">
+          <img src="images/274.png" alt="Project Image 14" class="img-fluid small" loading="lazy">
         </div>
 		  
 		 <!-- Video -->
@@ -595,14 +595,14 @@ data-aos-offset="200">
 
 <!-- Other -->
         <div class="project-content" id="other">
-          <img src="images/z6055486063658_888c6d176445b27621f128ff037964a3.jpg" alt="Project Image 16" class="img-fluid random">
-          <img src="images/z6055486008579_d93f83e3a40a22cf7161b1c339c45804.jpg" alt="Project Image 17" class="img-fluid random">
-          <img src="images/z6055486153155_3494c044cd4b033dc3743868995f8acd.jpg" alt="Project Image 18" class="img-fluid random">
-		  <img src="images/z6055486118720_320d62c012115f127da67a18e4635a9d.jpg" alt="Project Image 19" class="img-fluid random">
-		   <img src="images/z6055485961013_697a0401eee0f8c1f7c1efedae846813.jpg" alt="Project Image 20" class="img-fluid random">
-		 <img src="images/soda_can_6.png" alt="Project Image 21" class="img-fluid random">
-		 <img src="images/107_c.png" alt="Project Image 22" class="img-fluid random">
-		<img src="images/document jpeg178.jpg" alt="Project Image 23" class="img-fluid random">
+          <img src="images/z6055486063658_888c6d176445b27621f128ff037964a3.jpg" alt="Project Image 16" class="img-fluid random" loading="lazy">
+          <img src="images/z6055486008579_d93f83e3a40a22cf7161b1c339c45804.jpg" alt="Project Image 17" class="img-fluid random" loading="lazy">
+          <img src="images/z6055486153155_3494c044cd4b033dc3743868995f8acd.jpg" alt="Project Image 18" class="img-fluid random" loading="lazy">
+		  <img src="images/z6055486118720_320d62c012115f127da67a18e4635a9d.jpg" alt="Project Image 19" class="img-fluid random" loading="lazy">
+		   <img src="images/z6055485961013_697a0401eee0f8c1f7c1efedae846813.jpg" alt="Project Image 20" class="img-fluid random" loading="lazy">
+		 <img src="images/soda_can_6.png" alt="Project Image 21" class="img-fluid random" loading="lazy">
+		 <img src="images/107_c.png" alt="Project Image 22" class="img-fluid random" loading="lazy">
+		<img src="images/document jpeg178.jpg" alt="Project Image 23" class="img-fluid random" loading="lazy">
         </div>
       </div>
     </div>
@@ -626,7 +626,7 @@ data-aos-offset="200">
           <a href="images/345c6d52234bbc72407ea25d49ad945e.jpg" data-lightbox="review-images" data-title="Phong cách thiết kế hiện đại, phù hợp với mong muốn của tôi. Rất cảm ơn!">
 			<img
             src="images/345c6d52234bbc72407ea25d49ad945e.jpg"
-            alt="Image 1" 
+            alt="Image 1" loading="lazy"
 				 /></a>
 			
           <div class="card-content">
@@ -644,7 +644,7 @@ data-aos-offset="200">
           <a href="images/177989671f5e37ae3c9d7bdb417a031e.jpg" data-lightbox="review-images" data-title="Thiết kế của bạn thật sự rất sáng tạo, từng chi tiết đều tinh tế và hoàn thiện.">
 			<img
             src="images/177989671f5e37ae3c9d7bdb417a031e.jpg"
-            alt="Image 2"
+            alt="Image 2" loading="lazy"
 				 /></a>
           <div class="card-content">
             <p class="username">@dungguyen</p>
@@ -661,7 +661,7 @@ data-aos-offset="200">
           <a href="images/ae70c0fdc9381b07dac1d39d72ac913a.jpg" data-lightbox="review-images" data-title="Mọi thứ được hoàn thành nhanh chóng và chất lượng tuyệt vời. Tôi rất hài lòng!">
 			<img
             src="images/ae70c0fdc9381b07dac1d39d72ac913a.jpg"
-            alt="Image 3"
+            alt="Image 3" loading="lazy"
           /></a>
           <div class="card-content">
             <p class="username">@anhthu</p>
@@ -678,7 +678,7 @@ data-aos-offset="200">
           <a href="images/b3e5db5a3bf1399f74500a6209462794.jpg" data-lightbox="review-images" data-title="Bạn đã thực sự mang đến một sản phẩm vượt mong đợi. Cảm ơn vì sự chuyên nghiệp!">
 			<img
             src="images/b3e5db5a3bf1399f74500a6209462794.jpg"
-            alt="Image 4" 
+            alt="Image 4"  loading="lazy"
 				 /></a>
           <div class="card-content">
             <p class="username">@michaeljohnson</p>
@@ -695,7 +695,7 @@ data-aos-offset="200">
          <a href="images/b80ad9fd48f0b1e8d404775c495633be.jpg" data-lightbox="review-images" data-title="Thiết kế phù hợp với thương hiệu của tôi. Mọi chi tiết đều rất chỉn chu và đẹp mắt.">
 			<img
             src="images/b80ad9fd48f0b1e8d404775c495633be.jpg"
-				 alt="Image 5"></a>
+				 alt="Image 5" loading="lazy"></a>
           <div class="card-content">
             <p class="username"> @thanhhuy</p>
             <p class="comment">"Thiết kế phù hợp với thương hiệu của tôi. Mọi chi tiết đều rất chỉn chu và đẹp mắt."</p>
