Update hiệu ứng cursor và sửa lỗi

--- a/index.html
+++ b/index.html
@@ -781,12 +781,18 @@ data-aos-offset="200">
 	
 <script src="Js/lightbox.js"></script>
 
+
 <!-- Custom scripts -->
 <script src="Js/control.js"></script>
-<script src="js/typed.js"></script>
-<script src="js/port.js"></script>
+<script src="Js/typed.js"></script>
+<script src="Js/port.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 
+<script src="https://unpkg.com/cursor-effects@latest/dist/browser.js"></script>
+<script>
+  new cursoreffects.fairyDustCursor(); // Hiệu ứng cursor "fairy dust"
+</script>
+	
 <script>
   AOS.init();
 </script>
